# qdb-documentation

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.txt  build_freebsd.txt  build_linux.txt  building.txt  download_branches.sh  find_and_replace_in_file.js  freebsd_packages.txt  html - Shortcut.lnk  install_linux.txt  license.txt  make.bat  readme.txt
examples/: CMakeLists.txt
examples/benchmark/: CMakeLists.txt  client.cpp  server.cpp
examples/c/: CMakeLists.txt  delete.c  get.c  get_buffer.c  put.c  update.c
examples/java/: CMakeLists.txt  WrpmeExample.java  WrpmeRawExample.java
examples/simple/: .gitignore  CMakeLists.txt  simple.cpp  simple.sln  simple.vcxproj
qdb/c/xml/: __attr_8h.xml  batch_8h.xml  blob_8h.xml  client_8h.xml  deprecated.xml  deque_8h.xml  dir_0188a3e6da905bc60aceb35bf790b8c9.xml  dir_15cc682625682d2d08b4e1950e709ca7.xml  dir_1b5a39b76692a42b971e5a2561783652.xml  dir_459c29b4a51f26e33090a7f03d80cc41.xml  dir_632ff29478d52ad59079539d00d369ff.xml  dir_992125da0cacae4897794fec8cdf29d7.xml  dir_b1390110faa6419f3381c3bf40c78339.xml  dir_cf4c4a12eb9d2821032e40f1ddeaaf89.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  error_8h.xml  group___query.xml  group__attr.xml  group__batch.xml  group__blob.xml  group__client.xml  group__deque.xml  group__error.xml  group__hset.xml  group__integer.xml  group__iterator.xml  group__log.xml  group__node.xml  group__option.xml  group__prefix.xml  group__query.xml  group__stream.xml  group__suffix.xml  group__tag.xml  group__ts.xml  hset_8h.xml  index.xml  indexpage.xml  integer_8h.xml  iterator_8h.xml  (+33 more)
qdb/java-legacy/xml/: _qdb_aggregation_8java.xml  _qdb_batch_8java.xml  _qdb_batch_blob_8java.xml  _qdb_batch_entry_8java.xml  _qdb_batch_future_8java.xml  _qdb_batch_operation_8java.xml  _qdb_blob_8java.xml  _qdb_blob_aggregation_8java.xml  _qdb_blob_aggregation_collection_8java.xml  _qdb_blob_column_collection_8java.xml  _qdb_blob_column_value_8java.xml  _qdb_cluster_8java.xml  _qdb_column_collection_8java.xml  _qdb_column_value_8java.xml  _qdb_deque_8java.xml  _qdb_double_aggregation_8java.xml  _qdb_double_aggregation_collection_8java.xml  _qdb_double_column_collection_8java.xml  _qdb_double_column_value_8java.xml  _qdb_entry_8java.xml  _qdb_entry_factory_8java.xml  _qdb_entry_metadata_8java.xml  _qdb_entry_tags_8java.xml  _qdb_expirable_entry_8java.xml  _qdb_expiry_time_8java.xml  _qdb_future_8java.xml  _qdb_hash_set_8java.xml  _qdb_id_8java.xml  _qdb_integer_8java.xml  _qdb_node_8java.xml  _qdb_stream_8java.xml  _qdb_stream_channel_8java.xml  _qdb_tag_8java.xml  _qdb_tag_entries_8java.xml  _qdb_time_series_8java.xml  classnet_1_1quasardb_1_1qdb_1_1_qdb_aggregation.xml  classnet_1_1quasardb_1_1qdb_1_1_qdb_batch.xml  classnet_1_1quasardb_1_1qdb_1_1_qdb_batch_blob.xml  classnet_1_1quasardb_1_1qdb_1_1_qdb_batch_entry.xml  classnet_1_1quasardb_1_1qdb_1_1_qdb_batch_future.xml  (+45 more)
qdb/java/xml/: _alias_already_exists_exception_8java.xml  _alias_not_found_exception_8java.xml  _auto_flush_writer_8java.xml  _batch_already_run_exception_8java.xml  _batch_closed_exception_8java.xml  _batch_not_run_exception_8java.xml  _buffer_8java.xml  _buffer_closed_exception_8java.xml  _cluster_closed_exception_8java.xml  _column_8java.xml  _connection_exception_8java.xml  _connection_refused_exception_8java.xml  _exception_8java.xml  _exception_factory_8java.xml  _filtered_range_8java.xml  _host_not_found_exception_8java.xml  _incompatible_type_exception_8java.xml  _input_exception_8java.xml  _invalid_argument_exception_8java.xml  _invalid_iterator_exception_8java.xml  _invalid_reply_exception_8java.xml  _local_system_exception_8java.xml  _nano_clock_8java.xml  _operation_disabled_exception_8java.xml  _operation_exception_8java.xml  _out_of_bounds_exception_8java.xml  _overflow_exception_8java.xml  _protocol_exception_8java.xml  _query_8java.xml  _query_builder_8java.xml  _reader_8java.xml  _remote_system_exception_8java.xml  _reserved_alias_exception_8java.xml  _resource_locked_exception_8java.xml  _result_8java.xml  _row_8java.xml  _session_8java.xml  _system_exception_8java.xml  _table_8java.xml  _time_range_8java.xml  (+82 more)
qdb/python/: .gitignore  Unzip package in qdb subfolder.txt  WARNING - qdb __init__.py must be updated manualy.txt  WARNING.txt
qdb/python/qdb/: impl.py
schemas/: kernel_design.gv  network_flow.gv
scripts/release/: set_version.sh
source/: abbreviations.rst  changes.rst  conf.py  contact.rst  contacting_support.rst  faq.rst  glossary.rst  index.html  index.html.in  index.rst  license.rst  primer.rst
source/1.1/: conf.py
source/1.1.2/: conf.py
source/1.1.3/: conf.py  glossary.rst  index.rst
source/_static/: version_switch.js
source/_templates/: layout.html
source/administration/: backup.rst  index.rst  installation.rst  installation_aws.rst  installation_azure.rst  installation_deb.rst  installation_debian.rst  installation_docker.rst  installation_freebsd.rst  installation_juju.rst  installation_other_linux.rst  installation_rpm.rst  installation_windows.rst  operations.rst  security.rst  system_requirements.rst  troubleshooting.rst  tuning.rst  upgrade.rst
source/api/: c.rst  common.rst  cpp.rst  example_client.py  example_raw_client.py  go.rst  hadoop.rst  index.rst  java-legacy.rst  java.rst  jni.rst  net.rst  nodejs.rst  php.rst  python.rst  queries.rst  r.rst  rest.rst  ruby.rst  spark.rst  streams.rst  time_series.rst
source/concepts/: cluster_organization.rst  concurrency.rst  data_storage.rst  data_transfer.rst  data_types.rst  distribution.rst  index.rst  performance.rst  persistence.rst  protocol.rst  security.rst  streaming.rst  tags.rst  transactions.rst
source/reference/: confgen.rst  index.rst  qdb-benchmark.rst  qdb_bench.rst  qdb_cluster_keygen.rst  qdb_comparison.rst  qdb_dbtool.rst  qdb_excel.rst  qdb_generate_config.rst  qdb_grafana.rst  qdb_httpd.rst  qdb_shell.rst  qdb_user_add.rst  qdbd.rst  wrpme_comparison.rst  wrpme_dbtool.rst  wrpme_httpd.rst  wrpme_shell.rst  wrpmed.rst
source/tutorials/: index.rst  one_ring.rst  secured_cluster.rst  tut_quick.rst
(+28 files in other folders)
